--- a/package.json
+++ b/package.json
@@ -11,7 +11,5 @@
   "devDependencies": {
     "node-sass": "^4.11.0"
   },
-  "dependencies": {
-    "bootstrap": "^4.3.1"
-  }
+  "dependencies": {}
 }
